Sat Aug 28 00:26:26 1999  Jerry Quinn <jquinn@nortelnetworks.com>

	* config/tc-hppa.c (pa_ip):  Add cases for '.', '~'. '$'. and '!'

	* config/tc-hppa.c (pa_ip):  Add case for 'I'.  

1999-08-27  Jim Wilson  <wilson@cygnus.com>

	* dwarf2dbg.c (MAX_SPECIAL_ADDR_DELTA): Correct typo in comment.
	(struct ls): Add frag field.  Initialize it to zero.
	(out_end_sequence): New local text_frag.  Set it while in text section.
	Replace address check with frag check.  Set ls.frag to text_frag if
	out_set_addr called.
	(dwarf2_gen_line_info): Add explanatory comment.  New local saved_frag.
	Set it before switching sections.  Replace address check with frag
	check.  Set ls.frag to saved_frag if out_set_addr called.

1999-08-26  David Mosberger  <davidm@hpl.hp.com>

        * dwarf2dbg.c (out_end_sequence): If address changed, directly
	output "advance_pc" opcode instead of calling gen_addr_line().
	The latter has the undesired side-effect of creating a new row
	in the debug line info matrix. 

1999-08-26  Jim Wilson  <wilson@cygnus.com>

	* dwarf2dbg.c (out_end_sequence): Correct comments.  Set last to
	ls.last_filename if last is less than zero.  Set ls.last_filename
	when allocating new entry.
	(dwarf2_gen_line_info): Save seg and subseg info before subseg_new
	call.

1999-08-20  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* config/tc-i386.c (i386_index_check): Fix the displacement size
	when INFER_ADDR_PREFIX.

1999-08-18  Nick Clifton  <nickc@cygnus.com>

	* config/tc-arm.c (md_apply_fix3): If an offset is invalid,
	display its value.

1999-08-17  Ian Lance Taylor  <ian@zembu.com>

	* config/tc-ppc.c (md_assemble): Trim @ha constant to 16 bits, to
	handle 0xffffNNNN constants correctly.

1999-08-16  Nick Clifton  <nickc@cygnus.com>

	* config/tc-arm.c (do_ldst): Look for register conflicts on stores
	as well as loads.

1999-08-13  Nick Clifton  <nickc@cygnus.com>

	* config/tc-arm.c (validate_offset_imm): Work on unsigned values.