@@ -1,3 +1,7 @@
+Sat Aug 28 01:23:11 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* config/tc-hppa.c (pa_ip): Do not allow '*' in 32bit completers.
+
 Sat Aug 28 00:26:26 1999  Jerry Quinn <jquinn@nortelnetworks.com>
 
 	* config/tc-hppa.c (pa_ip):  Add cases for '.', '~'. '$'. and '!'
